--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     </properties>
 
     <groupId>com.qzero</groupId>
-    <artifactId>superMCServerManager</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>mcga</artifactId>
+    <version>1.0</version>
 
     <dependencies>
         <dependency>
